vendor/mico-2.3.2/test/idl/error/expected-stderr-case11.idl
case11.idl:10: type 'E' has identical members
